--- a/showcase/src/app/demo/table/demo-table.component.html
+++ b/showcase/src/app/demo/table/demo-table.component.html
@@ -6,6 +6,12 @@
 					[extensions]="['HTML', 'TS']">
 		<showcase-table-regular></showcase-table-regular>
 	</example-viewer>
+
+	<example-viewer exampleTitle="SHOWCASE.DEMO.TABLE.WITH_CUSTOM_ACTIONS"
+					filesPath="table/with-custom-actions/table"
+					[extensions]="['HTML', 'TS']">
+		<showcase-table-with-custom-actions></showcase-table-with-custom-actions>
+	</example-viewer>
 </section>
 <stark-reference-block [links]="referenceList"></stark-reference-block>
 
