refactor(docs): add a demo for table with transcluded action bar (WIP)

--- a/showcase/src/app/demo/table/demo-table.component.html
+++ b/showcase/src/app/demo/table/demo-table.component.html
@@ -12,6 +12,12 @@
 					[extensions]="['HTML', 'TS']">
 		<showcase-table-with-custom-actions></showcase-table-with-custom-actions>
 	</example-viewer>
+
+	<example-viewer exampleTitle="SHOWCASE.DEMO.TABLE.WITH_TRANSCLUDED_ACTION_BAR"
+					filesPath="table/with-transcluded-action-bar/table"
+					[extensions]="['HTML', 'TS', 'SCSS']">
+		<showcase-table-with-transcluded-action-bar></showcase-table-with-transcluded-action-bar>
+	</example-viewer>
 </section>
 <stark-reference-block [links]="referenceList"></stark-reference-block>
 
