refactor(docs): add a demo for table with fixed header (WIP)

--- a/showcase/src/app/demo/table/demo-table.component.html
+++ b/showcase/src/app/demo/table/demo-table.component.html
@@ -18,6 +18,12 @@
 					[extensions]="['HTML', 'TS', 'SCSS']">
 		<showcase-table-with-transcluded-action-bar></showcase-table-with-transcluded-action-bar>
 	</example-viewer>
+
+	<example-viewer exampleTitle="SHOWCASE.DEMO.TABLE.WITH_FIXED_HEADER"
+					filesPath="table/with-fixed-header/table"
+					[extensions]="['HTML','TS']">
+		<showcase-table-with-fixed-header></showcase-table-with-fixed-header>
+	</example-viewer>
 </section>
 <stark-reference-block [links]="referenceList"></stark-reference-block>
 
