refactor(docs): add a demo for table with custom styling (WIP)

--- a/showcase/src/app/demo/table/demo-table.component.html
+++ b/showcase/src/app/demo/table/demo-table.component.html
@@ -24,6 +24,12 @@
 					[extensions]="['HTML','TS']">
 		<showcase-table-with-fixed-header></showcase-table-with-fixed-header>
 	</example-viewer>
+
+	<example-viewer exampleTitle="SHOWCASE.DEMO.TABLE.WITH_CUSTOM_STYLING"
+					filesPath="table/with-custom-styling/table"
+					[extensions]="['HTML', 'TS', 'SCSS']">
+		<showcase-table-with-custom-styling></showcase-table-with-custom-styling>
+	</example-viewer>
 </section>
 <stark-reference-block [links]="referenceList"></stark-reference-block>
 
