--- a/showcase/src/styles/_stark-styles.scss
+++ b/showcase/src/styles/_stark-styles.scss
@@ -21,6 +21,7 @@ IMPORTANT: Stark styles are provided as SCSS styles so they should be imported i
 @import "~@nationalbankbelgium/stark-ui/src/modules/collapsible/components/collapsible-theme";
 @import "~@nationalbankbelgium/stark-ui/src/modules/collapsible/components/collapsible.component";
 @import "~@nationalbankbelgium/stark-ui/src/modules/date-range-picker/components/date-range-picker.component";
+@import "~@nationalbankbelgium/stark-ui/src/modules/generic/components/generic-search/generic-search.component";
 @import "~@nationalbankbelgium/stark-ui/src/modules/language-selector/components/language-selector.component";
 @import "~@nationalbankbelgium/stark-ui/src/modules/message-pane/components/message-pane.component";
 @import "~@nationalbankbelgium/stark-ui/src/modules/message-pane/components/message-pane-theme";
