--- a/packages/stark-ui/src/modules/generic/components/generic-search/_generic-search.component.scss
+++ b/packages/stark-ui/src/modules/generic/components/generic-search/_generic-search.component.scss
@@ -1,8 +1,7 @@
+$button-spacing: 10px;
+
 .stark-generic-search {
   .stark-fold-up-item {
-    overflow-y: hidden;
-    overflow-x: hidden;
-    max-height: 500px;
     transition: all 0.4s;
 
     /* animation trigger */
@@ -13,47 +12,25 @@
   }
 
   .form-actions {
-    margin-top: 15px;
-    text-align: right;
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: -$button-spacing;
+
     button {
-      display: block;
-      width: 100%;
-      margin-bottom: 15px;
-      line-height: 48px;
+      margin: $button-spacing;
+      width: calc(100% - #{$button-spacing} * 2);
+
       font-size: 20px;
-
-      &.stark-outline,
-      &.stark-delete {
-        line-height: 46px;
-      }
+      line-height: 48px;
     }
-  }
-}
 
-@media #{$desktop-query} {
-  .stark-generic-search {
-    .stark-fold-up-item:not(.stark-fold-up) {
-      margin-bottom: 2px;
-    }
-  }
-}
-
-@media #{$tablet-query} {
-  .stark-generic-search {
-    .form-actions {
-      position: relative;
+    @media #{$tablet-query} {
+      justify-content: flex-end;
       button {
-        display: inline-block;
-        width: auto;
-        margin-bottom: 0;
-        line-height: 34px;
         font-size: 13px;
-
-        &.stark-outline,
-        &.stark-delete {
-          line-height: 30px;
-          min-height: 30px;
-        }
+        line-height: 34px;
+        width: auto;
       }
     }
   }
