fix(stark-ui): fix animation for toggling search
  - added toggle to demo page

--- a/packages/stark-ui/src/modules/generic/components/generic-search/generic-search.component.html
+++ b/packages/stark-ui/src/modules/generic/components/generic-search/generic-search.component.html
@@ -1,4 +1,4 @@
-<div class="stark-fold-up-item" [ngClass]="{ 'stark-fold-up': isFormHidden }">
+<div [@collapse]="isFormHidden && 'collapsed'" [class.collapsing]="isFormHidden">
 	<form
 		[formGroup]="genericForm"
 		*ngIf="genericForm"
