--- a/packages/stark-ui/src/modules/generic/components/generic-search/_generic-search.component.scss
+++ b/packages/stark-ui/src/modules/generic/components/generic-search/_generic-search.component.scss
@@ -1,14 +1,8 @@
 $button-spacing: 10px;
 
 .stark-generic-search {
-  .stark-fold-up-item {
-    transition: all 0.4s;
-
-    /* animation trigger */
-    &.stark-fold-up {
-      max-height: 0;
-      opacity: 0;
-    }
+  .collapsing {
+    overflow: hidden;
   }
 
   .form-actions {
